[gd_scene load_steps=6 format=3 uid="uid://d0nd3tepukibc"]

[ext_resource type="Script" uid="uid://dq43k21h3qfd0" path="res://scripts/menu/save_select.gd" id="1_l14ag"]
[ext_resource type="Texture2D" uid="uid://vlsfi0moxghb" path="res://assets/world_assets/ezgif-8fc02c9f193ee8.png" id="1_up4pf"]

[sub_resource type="Animation" id="Animation_3rkf3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nl8w3"]
resource_name = "loop"
length = 3.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_247la"]
_data = {
&"RESET": SubResource("Animation_3rkf3"),
&"loop": SubResource("Animation_nl8w3")
}

[node name="SaveSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l14ag")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(3.84, 3.6)
texture = ExtResource("1_up4pf")
hframes = 5
vframes = 2

[node name="Save1" type="Button" parent="."]
layout_mode = 0
offset_left = 334.0
offset_top = 734.0
offset_right = 749.0
offset_bottom = 848.0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 77
text = "Save 1
"
flat = true

[node name="Save2" type="Button" parent="."]
layout_mode = 0
offset_left = 817.0
offset_top = 729.0
offset_right = 1119.0
offset_bottom = 843.0
theme_override_colors/font_hover_color = Color(0.9490196, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 77
text = "Save 2"
flat = true

[node name="Save3" type="Button" parent="."]
layout_mode = 0
offset_left = 1313.0
offset_top = 730.0
offset_right = 1482.0
offset_bottom = 844.0
theme_override_colors/font_hover_color = Color(0.9490196, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 77
text = "Save 3"
flat = true

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 27.0
offset_right = 240.0
offset_bottom = 141.0
theme_override_colors/font_hover_color = Color(0.9490196, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 77
text = "Back"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_247la")
}
autoplay = "loop"
speed_scale = 1.5

[connection signal="pressed" from="Save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="Save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="Save3" to="." method="_on_save_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
